<resources>
    <string name="amount_invalid_format">Nieprawidłowy format kwoty</string>
    <string name="app_name">WeddingPlanner</string>
    <string name="assignees_2_plus">2+</string>
    <string name="budget_estimated_expenses">Szacunkowe\nwydatki</string>
    <string name="budget_initial_budget">Wstępny budżet</string>
    <string name="budget_paid">Wydano</string>
    <string name="button_add">Dodaj</string>
    <string name="button_invite">Zaproś</string>
    <string name="button_join_wedding">Dołącz do wesela</string>
    <string name="button_register">Zarejestruj</string>
    <string name="button_save">Zapisz</string>
    <string name="button_sign_in">Zaloguj</string>
    <string name="category_most_important">Najważniejsze</string>
    <string name="category_most_ceremony">Ceremonia</string>
    <string name="category_most_formal_documents">Dokumenty formalne</string>
    <string name="category_most_wedding_hall">Sala weselna</string>
    <string name="category_most_subcontractors">Podwykonawcy</string>
    <string name="category_most_stylization">Stylizacje</string>
    <string name="dashboard_guests_title">Liczba gości: %1$d</string>
    <string name="dashboard_subcontractors_title">Liczba podwykonawców: %1$d</string>
    <string name="day_monday">Poniedziałek</string>
    <string name="day_tuesday">Wtorek</string>
    <string name="day_wednesday">Środa</string>
    <string name="day_thursday">Czwartek</string>
    <string name="day_friday">Piątek</string>
    <string name="day_saturday">Sobota</string>
    <string name="day_sunday">Niedziela</string>
    <string name="details_delete">Usuń</string>
    <string name="details_edit">Edytuj</string>
    <string name="dialog_add">Dodaj</string>
    <string name="dialog_back">Powrót</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="dialog_confirm">Zatwierdź</string>
    <string name="dialog_delete">Usuń</string>
    <string name="dialog_send_email">Wyślij e-mail</string>
    <string name="dialog_pick">Wybierz</string>
    <string name="dialog_yes">Tak</string>
    <string name="dialog_no">Nie</string>
    <string name="dialog_category_choice">Wybierz kategorię</string>
    <string name="dialog_age_choice">Wybierz przedział wiekowy</string>
    <string name="dialog_expense_subcontractor_choice">Wybierz podwykonawcę</string>
    <string name="dialog_guest_choice">Wybierz gościa, dla którego będzie osobą towarzyszącą</string>
    <string name="dialog_invite_to_wedding_title">Pomyślnie stworzono zaproszenie dla pomocnika</string>
    <string name="dialog_join_wedding_info">Wprowadź kod zaproszenia. Otrzymasz go od właściciela wesela lub znajdziesz w skrzynce e-mailowej.</string>
    <string name="dialog_person_choice">Wybierz osobę</string>
    <string name="dialog_table_choice">Wybierz miejsce</string>
    <string name="dialog_task_add_sub_task_title">Nowe podzadanie</string>
    <string name="dialog_task_bookmarks_title">Wybierz etykiety</string>
    <string name="dialog_task_date_title">Wybierz datę</string>
    <string name="dialog_task_manage_sub_tasks_title">Zaznacz podzadania do usunięcia</string>
    <string name="dialog_task_people_title">Wybierz osoby</string>
    <string name="dialog_task_time_title">Wybierz godzinę</string>
    <string name="expense_field_category">Kategoria</string>
    <string name="expense_field_initial_amount">Szacunkowa kwota</string>
    <string name="expense_field_for_whom">Dla kogo</string>
    <string name="expense_field_for_what">Za co</string>
    <string name="expense_field_amount">Kwota</string>
    <string name="expense_field_edit_date">Data edycji</string>
    <string name="expense_field_real_expenses">Rzeczywiste wydatki</string>
    <string name="expense_field_awaiting_payments">Oczekujące płatności</string>
    <string name="expense_details_delete_question">Czy na pewno chcesz usunąć ten wydatek?</string>
    <string name="expense_details_connected_subcontractor">Powiązany podwykonawca</string>
    <string name="field_category">Kategoria</string>
    <string name="field_date">Data</string>
    <string name="field_email">E-mail</string>
    <string name="field_invitation_code">Kod zaproszenia</string>
    <string name="field_name">Nazwa</string>
    <string name="field_notes">Uwagi</string>
    <string name="field_payer">Kto płaci</string>
    <string name="field_password">Hasło</string>
    <string name="field_time">Godzina</string>
    <string name="field_title">Tytuł</string>
    <string name="field_lack">Brak</string>
    <string name="field_not_specified">Nie określono</string>
    <string name="guest_details_delete_question">Czy na pewno chcesz usunąć tego gościa?</string>
    <string name="guest_details_delete_question_guest">Czy na pewno chcesz usunąć tego gościa? Wiąże się to z usunięciem osoby towarzyszącej</string>
    <string name="guest_field_accompany">Osoba towarzysząca</string>
    <string name="guest_field_accompany_info">Osoba towarzysząca gościa %1$s</string>
    <string name="guest_field_age">Przedział wiekowy</string>
    <string name="guest_field_contact">Kontakt</string>
    <string name="guest_field_connected_with">Powiązanie</string>
    <string name="guest_field_connected_with_info">Powiązanie z %1$s</string>
    <string name="guest_field_guest">Gość</string>
    <string name="guest_field_guest_type">Rodzaj gościa</string>
    <string name="guest_field_invitation_status">Status zaproszenia</string>
    <string name="guest_field_invitation_sent">Wysłano zaproszenie</string>
    <string name="guest_field_invitation_sent_short">Wysłano</string>
    <string name="guest_field_invitation_accepted">Potwierdzona obecność</string>
    <string name="guest_field_invitation_accepted_short">Zgoda</string>
    <string name="guest_field_invitation_rejected">Potwierdzona nieobecność</string>
    <string name="guest_field_invitation_rejected_short">Odmowa</string>
    <string name="guest_field_invitation_awaiting">Oczekuje na potwierdzenie</string>
    <string name="guest_field_invitation_awaiting_short">Oczekuje</string>
    <string name="guest_field_invitation_none">Nie określono</string>
    <string name="guest_field_name_surname">Imię i\u00A0nazwisko</string>
    <string name="guest_field_phone">Telefon</string>
    <string name="guest_field_table">Miejsce</string>
    <string name="guest_table_number">Stół nr %1$d</string>
    <string name="header_title_about_app">O aplikacji</string>
    <string name="header_title_budget">Budżet</string>
    <string name="header_title_budget_new">Nowy wydatek</string>
    <string name="header_title_category">Kategoria</string>
    <string name="header_title_category_new">Nowa kategoria</string>
    <string name="header_title_expense_details">Wydatek</string>
    <string name="header_title_expense_edit">Edycja wydatku</string>
    <string name="header_title_guests">Goście</string>
    <string name="header_title_guest_details">Gość</string>
    <string name="header_title_guest_edit">Edycja gościa</string>
    <string name="header_title_guest_new">Nowy gość</string>
    <string name="header_title_invite_to_wedding">Zaproś pomocnika</string>
    <string name="header_title_more">Więcej</string>
    <string name="header_title_payment">Płatność</string>
    <string name="header_title_payment_new">Nowa płatność</string>
    <string name="header_title_helpers">Pomocnicy</string>
    <string name="header_title_profile">Profil</string>
    <string name="header_title_settings">Ustawienia</string>
    <string name="header_title_subcontractor">Podwykonawca</string>
    <string name="header_title_subcontractor_edit">Edycja podwykonawcy</string>
    <string name="header_title_subcontractors">Podwykonawcy</string>
    <string name="header_title_subcontractor_new">Nowy podwykonawca</string>
    <string name="header_title_tasks">Zadania</string>
    <string name="header_title_task_details">Szczegóły zadania</string>
    <string name="header_title_task_edit">Edycja zadania</string>
    <string name="header_title_task_new">Nowe zadanie</string>
    <string name="header_title_wedding_new">Nowe wesele</string>
    <string name="header_title_weddings">Wesela</string>
    <string name="invite_to_wedding_title">Wprowadź adres e-mail pomocnika</string>
    <string name="invite_to_wedding_email_subject">Kod zaproszenia do wesela</string>
    <string name="invite_to_wedding_email_text">Zapraszam Cię do wpółtworzenia wesela w aplikacji WeddingPlanner.\nPoniżej znajduje się Twój kod:\n\n%1$s\n\nPodaj go w aplikacji podczas dołączania do wesela.\nJeśli nie posiadasz jeszcze konta - utwórz je.</string>
    <string name="invite_to_wedding_dialog_info">Przekaż powyższy kod pomocnikowi, aby mógł wykorzystać go podczas dołączania do Twojego wesela w swojej aplikacji.\n\nMożesz także skorzystać z opcji wysłania kodu w wiadomości e-mail.</string>
    <string name="list_standard_caption_empty">Brak danych do wyświetlenia</string>
    <string name="month_january">Styczeń</string>
    <string name="month_february">Luty</string>
    <string name="month_march">Marzec</string>
    <string name="month_april">Kwiecień</string>
    <string name="month_may">Maj</string>
    <string name="month_june">Czerwiec</string>
    <string name="month_july">Lipiec</string>
    <string name="month_august">Sierpień</string>
    <string name="month_september">Wrzesień</string>
    <string name="month_october">Październik</string>
    <string name="month_november">Listopad</string>
    <string name="month_december">Grudzień</string>
    <string name="no_assignees">Nie przypisano osób</string>
    <string name="no_description">Brak opisu</string>
    <string name="payment_field_amount">Kwota</string>
    <string name="payment_field_awaiting">Oczekująca</string>
    <string name="payment_field_date">Data płatności</string>
    <string name="payment_field_info">Dodatkowe informacje</string>
    <string name="payment_field_paid">Opłacona</string>
    <string name="payment_delete_question">Czy na pewno chcesz usunąć tę płatność?</string>
    <string name="period_year_1">rok</string>
    <string name="period_year_2">lata</string>
    <string name="period_year_3">lat</string>
    <string name="period_month_1">miesiąc</string>
    <string name="period_month_2">miesiące</string>
    <string name="period_month_3">miesięcy</string>
    <string name="period_day_1">dzień</string>
    <string name="period_day_2">dni</string>
    <string name="period_hour_1">godzina</string>
    <string name="period_hour_2">godziny</string>
    <string name="period_hour_3">godzin</string>
    <string name="period_minute_1">minuta</string>
    <string name="period_minute_2">minuty</string>
    <string name="period_minute_3">minut</string>
    <string name="period_second_1">sekunda</string>
    <string name="period_second_2">sekundy</string>
    <string name="period_second_3">sekund</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_in_dont_have_account">Nie masz konta?</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="sign_up_create_account">Utwórz konto</string>
    <string name="sign_up_have_account">Masz konto?</string>
    <string name="sign_up_regulation_info">Zapoznałem się z warunkami i akceptuję regulamin</string>
    <string name="sign_up_username">Nazwa użytkownika</string>
    <string name="subcontractor_field_address">Adres</string>
    <string name="subcontractor_field_collaboration_stage">Etap współpracy</string>
    <string name="subcontractor_field_considering">Rozważam</string>
    <string name="subcontractor_field_in_contact">Kontakt</string>
    <string name="subcontractor_field_confirmed">Potwierdzone</string>
    <string name="subcontractor_field_paid">Opłacone</string>
    <string name="subcontractor_field_cost">Kwota do zapłaty</string>
    <string name="subcontractor_field_name">Nazwa</string>
    <string name="subcontractor_field_www">Strona WWW</string>
</resources>